--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <meta name='robots' content='max-image-preview:large' />
 <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="alternate" type="application/rss+xml" title="Panda &raquo; Feed" href="https://pandaerc.com/index.php/feed/" />
 <link rel="alternate" type="application/rss+xml" title="Panda &raquo; Comments Feed" href="https://pandaerc.com/index.php/comments/feed/" />
+
+<script src="https://kit.fontawesome.com/f5a24ca635.js" crossorigin="anonymous"></script>
 <script>
 window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/14.0.0\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/14.0.0\/svg\/","svgExt":".svg","source":{"concatemoji":"https:\/\/pandaerc.com\/wp-includes\/js\/wp-emoji-release.min.js?ver=6.3.1"}};
 /*! This file is auto-generated */
